<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_marginTop="18dp"
    tools:context=".activites.AddEditActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_title"
        android:hint="@string/enter_title"
        android:inputType="text"
        />
<androidx.appcompat.widget.AppCompatEditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/edit_text_description"
    android:hint="@string/enter_description"
    android:inputType="textMultiLine"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:layout_marginTop="8dp"
        android:textAppearance="@android:style/TextAppearance.Medium"/>
    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/number_picker_priority"
    />
</androidx.appcompat.widget.LinearLayoutCompat>